style: fix tertiary btn for light mode, style preferences for dark mode

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -72,7 +72,7 @@
   }
 
   .btn-tertiary {
-    @apply bg-surface-secondary hover:bg-surface-secondary-hover;
+    @apply bg-gray-200 hover:bg-gray-300 dark:bg-surface-secondary dark:hover:bg-surface-secondary-hover;
   }
 
   .btn-danger {
